--- a/runnable/settings.json
+++ b/runnable/settings.json
@@ -11,9 +11,9 @@
 		]
 	},
 	"database": {
-		"url": "jdbc:mysql://localhost/jedistar?characterEncoding=utf8",
-		"user": "jedistar",
-		"pwd": "JeDiStArBoT"
+		"url": "jdbc:mysql://localhost/SLJbot?characterEncoding=utf8",
+		"user": "SLJbot",
+		"pwd": "sLjBoTlIVes"
 	},
 	"messages": "en"
 }
