update with SLJbot token

--- a/runnable/settings.json
+++ b/runnable/settings.json
@@ -1,5 +1,5 @@
 {
-	"discordToken": "Insert HERE the discord token of your bot",
+	"discordToken": "NDU5NzQzMzcwNTAwMjQzNDc3.Dg_SfQ.uF6U5SBE6x1rj0Zr95vxzIymowU",
 	"modsJsonURI": "http://apps.crouchingrancor.com/mods/advisor.json",
 	"botAdmins": {
 		"groups": [
