Update discord token

--- a/runnable/settings.json
+++ b/runnable/settings.json
@@ -1,5 +1,5 @@
 {
-	"discordToken": "NDU5NzQzMzcwNTAwMjQzNDc3.Dg_SfQ.uF6U5SBE6x1rj0Zr95vxzIymowU",
+	"discordToken": "NDU5NzQzMzcwNTAwMjQzNDc3.DhQpCg.WgJeTUWbBQ7tzKWIixjtUeuz7ac",
 	"modsJsonURI": "http://apps.crouchingrancor.com/mods/advisor.json",
 	"botAdmins": {
 		"groups": [
